# summarizer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  test.py
app/: config.py  lorax_service.py  main.py
app/models/: request.py
app/prompts/: academic_prompts.py  broader_public_prompts.py  decision_makers_prompts.py  donor_prompts.py
app/routers/: academic.py  broader_public.py  decision_makers.py  donor.py  general.py
app/utilities/: file_process.py
